fixing mobile alignment

--- a/public/index.css
+++ b/public/index.css
@@ -110,7 +110,7 @@ button {
 
   button {
     padding: 10px 20px;
-    margin-top: 10px;
+    margin-top: 40px;
   }
 
   .hide-for-small {
